--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "jest"
+    "test": "jest",
+    "seed": "node src/seed.js"
   },
   "keywords": [],
   "author": "MEI - Grupo 4",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "amqplib": "^0.10.3",
     "axios": "^1.6.2",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.1",
     "swagger-jsdoc": "^6.0.0",
     "swagger-ui-express": "^5.0.0",
